hphp/hack/doc/hack-langspec/tests/Types/this.php.expectf

Fatal error: Traits cannot have constants in %s/tests/Types/this.php on line 9